--- a/src/components/TransactionType/TransactionType.module.scss
+++ b/src/components/TransactionType/TransactionType.module.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   padding: var(--spacing-base);
   position: fixed;
-  transition: all 600ms ease-out;
+  transition: all 300ms ease-out;
   width: 100%;
 
   .transactionType__label {
@@ -23,9 +23,15 @@
     gap: var(--spacing-small);
   }
 
+  &.transactionType__bottom {
+    bottom: -100vh;
+    position: fixed;
+    transition: all 300ms ease-out;
+  }
+
   &.transactionType__top {
     bottom: 100vh;
-    transition: all 600ms ease-in;
+    transition: all 300ms ease-in;
   }
 }
 
@@ -35,7 +41,7 @@
   gap: var(--spacing-small);
   opacity: 0;
   padding: var(--spacing-tiny) var(--spacing-base);
-  transition: all 300ms ease-in 600ms;
+  transition: all 300ms ease-in 300ms;
   width: 100%;
 
   .transactionType__label {
