style: correcting color

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -87,7 +87,7 @@
   --gold: #c3a67a;
   --gold-dark: #887455;
   --gold-darker: #4e4230;
-  --gold-darkest: rgb(19, 16, 12);
+  --gold-darkest: #13100c;
 }
 
 [data-theme='light'] {
