--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -49,6 +49,13 @@
     background-color: transparent;
     border: 2px solid var(--gold-darker);
     color: var(--gold-darker);
+
+    &:disabled {
+      border: 2px solid var(--gold);
+      color: var(--gold);
+      box-shadow: none;
+      cursor: no-drop;
+    }
   }
 }
 
