--- a/src/components/Observation/Observation.module.scss
+++ b/src/components/Observation/Observation.module.scss
@@ -17,6 +17,38 @@
     margin-bottom: var(--spacing-small);
   }
 
+  .observation__container {
+    align-items: center;
+    display: flex;
+    gap: var(--spacing-small);
+    width: 100%;
+
+    .observation__input {
+      width: calc(100% - 48px - 16px);
+    }
+
+    .observation__next {
+      align-items: center;
+      border-radius: var(--full-radius);
+      display: flex;
+      height: 48px;
+      justify-content: center;
+      padding: 0;
+      width: 48px;
+
+      svg path {
+        transition: all 300ms ease-out;
+      }
+
+      &:disabled {
+        svg path {
+          fill: var(--gold);
+          transition: all 300ms ease-out;
+        }
+      }
+    }
+  }
+
   &.observation__bottom {
     bottom: -100vh;
     transition: all 300ms ease-out;
