--- a/src/components/Value/Value.module.scss
+++ b/src/components/Value/Value.module.scss
@@ -18,6 +18,9 @@
   }
 
   .value__inputcontainer {
+    align-items: center;
+    display: flex;
+    gap: var(--spacing-small);
     position: relative;
     width: 100%;
 
@@ -30,7 +33,7 @@
 
     .value__input {
       color: transparent;
-      width: 100%;
+      width: calc(100% - 48px - 16px);
     }
 
     .value__show {
@@ -51,6 +54,27 @@
       }
       100% {
         background-color: transparent;
+      }
+    }
+
+    .value__next {
+      align-items: center;
+      border-radius: var(--full-radius);
+      display: flex;
+      height: 48px;
+      justify-content: center;
+      padding: 0;
+      width: 48px;
+
+      svg path {
+        transition: all 300ms ease-out;
+      }
+
+      &:disabled {
+        svg path {
+          fill: var(--gold);
+          transition: all 300ms ease-out;
+        }
       }
     }
   }
