--- a/src/views/Transactions/Filters/Filters.module.scss
+++ b/src/views/Transactions/Filters/Filters.module.scss
@@ -2,7 +2,7 @@
   border: 1px solid var(--gold);
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-tiny);
+  gap: var(--spacing-nano);
   padding: var(--spacing-tiny);
   padding-bottom: 0;
   width: 100%;
@@ -11,6 +11,7 @@
     align-items: center;
     display: flex;
     gap: var(--spacing-tiny);
+    justify-content: space-between;
     width: 100%;
 
     .filters__label {
@@ -19,6 +20,10 @@
       font-weight: var(--font-weight-bold);
       line-height: var(--line-height-simple);
       width: 40%;
+    }
+
+    .filters__input {
+      width: 60%;
     }
 
     .filters__select {
