--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -45,6 +45,19 @@
     }
   }
 
+  &.danger {
+    background-color: var(--color-danger);
+    box-shadow: var(--subtle-drop-shadow);
+    color: white;
+
+    &:disabled {
+      background-color: var(--gold-lighter);
+      color: var(--gold);
+      box-shadow: none;
+      cursor: no-drop;
+    }
+  }
+
   &.outline {
     background-color: transparent;
     border: 2px solid var(--gold-darker);
