--- a/src/views/Transactions/Add/Subcategories/Subcategories.module.scss
+++ b/src/views/Transactions/Add/Subcategories/Subcategories.module.scss
@@ -78,6 +78,10 @@
   width: 100%;
 
   .subcategories__label {
+    color: var(--gold-darker);
+    font-size: var(--font-size-md);
+    font-weight: var(--font-weight-semibold);
+    line-height: var(--line-height-sm);
     margin-bottom: var(--spacing-nano);
   }
 
