--- a/src/views/Category/DeleteCategory/DeleteCategory.module.scss
+++ b/src/views/Category/DeleteCategory/DeleteCategory.module.scss
@@ -18,4 +18,9 @@
     justify-content: space-between;
     padding: var(--spacing-small);
   }
+
+  .modal__close {
+    @extend .modal__footer;
+    justify-content: center;
+  }
 }
