--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,11 +6,12 @@
   justify-content: space-around;
   left: 0;
   position: fixed;
+  transition: all ease 300ms;
   width: 100%;
 
   .navbar__navlink {
     align-items: center;
-    border-bottom: 4px solid transparent;
+    border-top: 4px solid transparent;
     color: white;
     display: flex;
     fill: white;
@@ -20,6 +21,7 @@
     height: 100%;
     justify-content: center;
     line-height: var(--line-height-simple);
+    transition: all ease 300ms;
     width: 100%;
 
     :first-child {
@@ -28,14 +30,17 @@
 
     & > svg > path {
       fill: white;
+      transition: all ease 300ms;
     }
 
     &.active {
       border-top: 4px solid var(--color-highlight);
       color: var(--color-highlight);
+      transition: all ease 300ms;
 
       & > svg > path {
         fill: var(--color-highlight);
+        transition: all ease 300ms;
       }
     }
   }
