--- a/src/views/Transactions/Add/Value/Value.module.scss
+++ b/src/views/Transactions/Add/Value/Value.module.scss
@@ -48,7 +48,7 @@
       width: 2px;
     }
 
-    @keyframes spin {
+    @keyframes cursor {
       0% {
         background-color: var(--gold-darkest);
       }
@@ -130,12 +130,12 @@
     }
 
     .value__cursor {
-      animation: spin 500ms ease infinite;
+      animation: cursor 500ms ease infinite;
       height: var(--line-height-xs);
       width: 2px;
     }
 
-    @keyframes spin {
+    @keyframes cursor {
       0% {
         background-color: var(--gold-darkest);
       }
