fix: correcting behavior when change a new transaction value during the creation

--- a/src/views/Transactions/Add/Value/Value.module.scss
+++ b/src/views/Transactions/Add/Value/Value.module.scss
@@ -43,7 +43,7 @@
     }
 
     .value__cursor {
-      animation: spin 500ms ease infinite;
+      animation: cursor 500ms ease infinite;
       height: var(--line-height-xs);
       width: 2px;
     }
