--- a/src/views/Transactions/Add/Add.module.scss
+++ b/src/views/Transactions/Add/Add.module.scss
@@ -28,13 +28,13 @@
   position: fixed;
   right: var(--spacing-base);
   top: var(--spacing-base);
-  transition: opacity ease-out 600ms;
-  transition-delay: 300ms;
+  transition: opacity ease-out 300ms;
+  transition-delay: 100ms;
   z-index: var(--zindex-overlay-content);
 
   &.hidden {
     opacity: 0;
-    transition: opacity ease-out 600ms;
+    transition: opacity ease-out 300ms;
     z-index: 0;
   }
 }
@@ -55,11 +55,22 @@
   transition: background-color ease-out 600ms;
   width: var(--spacing-large);
   z-index: var(--zindex-overlay);
+}
 
-  &.add__button__isopened {
-    background-color: var(--gold-lightest);
-    color: var(--gold-lightest);
-    transform: scale(200);
-    transition: transform ease-out 600ms;
+.add__overlay {
+  background-color: var(--gold-lightest);
+  height: 100vh;
+  opacity: 1;
+  position: fixed;
+  right: 0;
+  top: 0;
+  transition: transform ease-out 300ms;
+  width: 100vw;
+  z-index: var(--zindex-overlay);
+
+  &.add__overlay__hidden {
+    display: none;
+    opacity: 0;
+    transition: transform ease-out 300ms;
   }
 }
