fix: removing costing type when subcategory is from transaction type different of EXPENSE

--- a/src/views/Transactions/Add/Subcategories/Subcategories.module.scss
+++ b/src/views/Transactions/Add/Subcategories/Subcategories.module.scss
@@ -77,6 +77,11 @@
   padding: var(--spacing-small);
   width: 100%;
 
+  .subcategories__inputGroup {
+    display: flex;
+    flex-direction: column;
+  }
+
   .subcategories__label {
     color: var(--gold-darker);
     font-size: var(--font-size-md);
