feat: creating Summary at the Home screen

--- a/src/views/Transactions/Transactions.module.scss
+++ b/src/views/Transactions/Transactions.module.scss
@@ -25,7 +25,7 @@
       color: var(--gold-dark);
       font-size: var(--font-size-xs);
       font-weight: var(--font-weight-bold);
-      line-height: var(--line-height-simple);
+      line-height: var(--line-height-sm);
       text-align: right;
       width: 50%;
     }
