--- a/src/styles/datepicker.css
+++ b/src/styles/datepicker.css
@@ -21,9 +21,6 @@
   background-color: var(--gold-lightest) !important;
   color: var(--gold-light) !important;
 }
-.DateInput_fang {
-  top: 42px !important;
-}
 .DateInput_fangShape {
   fill: var(--gold-lightest) !important;
 }
@@ -104,11 +101,11 @@
   transition: border ease 300ms;
 }
 .SingleDatePickerInput__showClearDate {
-  padding: 0 0 0 30px !important;
+  padding: 0 30px 0 0 !important;
 }
 .SingleDatePickerInput_clearDate {
   margin: 0 0 0 5px !important;
-  left: 0 !important;
+  right: 0 !important;
   right: unset !important;
 }
 .SingleDatePickerInput_clearDate__default:focus,
