style: removing border

--- a/src/styles/datepicker.css
+++ b/src/styles/datepicker.css
@@ -93,6 +93,7 @@
   width: 100% !important;
 }
 .SingleDatePickerInput__withBorder {
+  border: none !important;
   border-bottom: 2px solid var(--gold) !important;
   transition: border ease 300ms;
 }
